--- a/2023 12December 25.ipynb
+++ b/2023 12December 25.ipynb
@@ -647,8 +647,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "id": "af7f6a8f-a309-47a1-a91a-e3e1462d0aaf",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class u(t):\n",
+    "    pass"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "id": "ed24856f-46ba-4b96-84e4-16ceb76c4fa3",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "100"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "u.x"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "abca54cd-f06a-456d-8f46-07349562612f",
    "metadata": {},
    "outputs": [],
    "source": []
