--- a/2023 12December 25.ipynb
+++ b/2023 12December 25.ipynb
@@ -679,8 +679,55 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "id": "abca54cd-f06a-456d-8f46-07349562612f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<__main__.MyClass object at 0x107c11b50>\n"
+     ]
+    }
+   ],
+   "source": [
+    "class MyMeta(type):       # MyMeta inherits from type, and can thus be a metaclass\n",
+    "    def __new__(cls, name, bases, attributes):\n",
+    "        return super().__new__\n",
+    "\n",
+    "class MyClass:\n",
+    "    pass\n",
+    "\n",
+    "m = MyClass()\n",
+    "print(m)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "id": "247ca840-a4fd-48e7-9228-c26f82c43a8b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "type"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "type(MyClass)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2a86c6c2-f2c3-4af6-9ffe-c49350b2edac",
    "metadata": {},
    "outputs": [],
    "source": []
