--- a/2023 12December 25.ipynb
+++ b/2023 12December 25.ipynb
@@ -679,7 +679,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 36,
    "id": "abca54cd-f06a-456d-8f46-07349562612f",
    "metadata": {},
    "outputs": [
@@ -687,16 +687,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<__main__.MyClass object at 0x107c11b50>\n"
+      "<__main__.MyClass object at 0x107bb7c10>\n"
      ]
     }
    ],
    "source": [
     "class MyMeta(type):       # MyMeta inherits from type, and can thus be a metaclass\n",
     "    def __new__(cls, name, bases, attributes):\n",
-    "        return super().__new__\n",
+    "        return super().__new__(cls, name, bases, attributes)\n",
     "\n",
-    "class MyClass:\n",
+    "class MyClass(metaclass=MyMeta):\n",
     "    pass\n",
     "\n",
     "m = MyClass()\n",
@@ -705,17 +705,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 37,
    "id": "247ca840-a4fd-48e7-9228-c26f82c43a8b",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "type"
+       "__main__.MyMeta"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -726,11 +726,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 38,
    "id": "2a86c6c2-f2c3-4af6-9ffe-c49350b2edac",
    "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "isinstance(MyMeta, type)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a9c85753-3acb-4366-8ab6-7b8e66b4fbc1",
+   "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "class MyMeta(type):       # MyMeta inherits from type, and can thus be a metaclass\n",
+    "    def __new__(cls, name, bases, attributes):\n",
+    "        return super().__new__(cls, name, bases, attributes)\n",
+    "\n",
+    "class MyClass(metaclass=MyMeta):\n",
+    "    pass\n",
+    "\n",
+    "m = MyClass()\n",
+    "print(m)"
+   ]
   }
  ],
  "metadata": {
