--- a/2023 12December 25.ipynb
+++ b/2023 12December 25.ipynb
@@ -762,6 +762,29 @@
     "m = MyClass()\n",
     "print(m)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "be744e91-9a87-47dc-9076-8d71354ac54b",
+   "metadata": {},
+   "source": [
+    "`MyClass`:\n",
+    "\n",
+    "- `type` is `MyMeta`\n",
+    "- inherits from `object`\n",
+    "\n",
+    "Thus:\n",
+    "- If I ask for MyClass.z, Python will look:\n",
+    "    - Instance: `MyClass`\n",
+    "    - Class: `MyMeta`\n",
+    "    - Parent/`object`: `object`\n",
+    " \n",
+    "- If I ask for m.z, Python will look:\n",
+    "    - Instance: `m`\n",
+    "    - Class: `MyClass`\n",
+    "    - Parent/`object`: `o\n",
+    "    "
+   ]
   }
  ],
  "metadata": {
