--- a/2023 12December 25.ipynb
+++ b/2023 12December 25.ipynb
@@ -782,9 +782,90 @@
     "- If I ask for m.z, Python will look:\n",
     "    - Instance: `m`\n",
     "    - Class: `MyClass`\n",
-    "    - Parent/`object`: `o\n",
-    "    "
+    "    - Parent/`object`: `object`    "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "id": "7363fcd5-dc4f-48ca-8cfe-fe4e3d09d59e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<__main__.MyClass object at 0x107c09a50>\n"
+     ]
+    }
+   ],
+   "source": [
+    "# let's add a new attribute\n",
+    "\n",
+    "class MyMeta(type):       # MyMeta inherits from type, and can thus be a metaclass\n",
+    "    def __new__(cls, name, bases, attributes):\n",
+    "\n",
+    "        attributes['x'] = 100\n",
+    "        attributes['y'] = [10, 20, 30]\n",
+    "\n",
+    "        return super().__new__(cls, name, bases, attributes)\n",
+    "\n",
+    "class MyClass(metaclass=MyMeta):\n",
+    "    pass\n",
+    "\n",
+    "m = MyClass()  # this runs MyMeta.__new__, which adds to attributes, then runs object.__new__ and object.__init__\n",
+    "print(m)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "id": "bdc72da5-0d22-4efa-a09e-26b3a57798bb",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "100"
+      ]
+     },
+     "execution_count": 40,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "m.x"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "id": "2c8e2067-0dca-41c0-ad27-1c8d92fcb298",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[10, 20, 30]"
+      ]
+     },
+     "execution_count": 41,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "m.y"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c850735f-8582-4c09-aa92-7da7b6774c53",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
