--- a/2023 12December 25.ipynb
+++ b/2023 12December 25.ipynb
@@ -835,12 +835,12 @@
     }
    ],
    "source": [
-    "m.x"
+    "m.x   # does m have x? No. Does m's class (MyClass) have x? Yes, thanks to MyMeta.__new__"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 42,
    "id": "2c8e2067-0dca-41c0-ad27-1c8d92fcb298",
    "metadata": {},
    "outputs": [
@@ -850,13 +850,13 @@
        "[10, 20, 30]"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "m.y"
+    "m.y    # does m have y? No. Does m's class (MyClass) have y? Yes, thanks to MyMeta.__new__"
    ]
   },
   {
