--- a/2023 12December 25.ipynb
+++ b/2023 12December 25.ipynb
@@ -787,7 +787,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 43,
    "id": "7363fcd5-dc4f-48ca-8cfe-fe4e3d09d59e",
    "metadata": {},
    "outputs": [
@@ -795,7 +795,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<__main__.MyClass object at 0x107c09a50>\n"
+      "<__main__.MyClass object at 0x107c0b3d0>\n"
      ]
     }
    ],
@@ -808,6 +808,11 @@
     "        attributes['x'] = 100\n",
     "        attributes['y'] = [10, 20, 30]\n",
     "\n",
+    "        # add a method, while we're at it\n",
+    "        def hello(self):\n",
+    "            return f'Hello!'\n",
+    "        attributes['hello'] = hello\n",
+    "\n",
     "        return super().__new__(cls, name, bases, attributes)\n",
     "\n",
     "class MyClass(metaclass=MyMeta):\n",
@@ -819,7 +824,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 44,
    "id": "bdc72da5-0d22-4efa-a09e-26b3a57798bb",
    "metadata": {},
    "outputs": [
@@ -829,7 +834,7 @@
        "100"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -840,7 +845,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 45,
    "id": "2c8e2067-0dca-41c0-ad27-1c8d92fcb298",
    "metadata": {},
    "outputs": [
@@ -850,7 +855,7 @@
        "[10, 20, 30]"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -863,6 +868,62 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "c850735f-8582-4c09-aa92-7da7b6774c53",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "id": "2b79ad40-6479-4bac-8211-5aca6697abf4",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Hello!'"
+      ]
+     },
+     "execution_count": 46,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "m.hello()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "id": "808b9a56-8fa3-47d8-80d9-5c15c2350901",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "mappingproxy({'__module__': '__main__',\n",
+       "              'x': 100,\n",
+       "              'y': [10, 20, 30],\n",
+       "              'hello': <function __main__.MyMeta.__new__.<locals>.hello(self)>,\n",
+       "              '__dict__': <attribute '__dict__' of 'MyClass' objects>,\n",
+       "              '__weakref__': <attribute '__weakref__' of 'MyClass' objects>,\n",
+       "              '__doc__': None})"
+      ]
+     },
+     "execution_count": 47,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "vars(MyClass)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f8e905a3-09dc-4406-a325-43538c6ceca8",
    "metadata": {},
    "outputs": [],
    "source": []
