--- a/2023 12December 25.ipynb
+++ b/2023 12December 25.ipynb
@@ -921,12 +921,29 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "f8e905a3-09dc-4406-a325-43538c6ceca8",
+   "cell_type": "markdown",
+   "id": "698e6acd-e8aa-458b-bd18-b47143658c68",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "My talk about decorators from PyCon US 2019:\n",
+    "\n",
+    "https://www.youtube.com/watch?v=MjHpMCIvwsY"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1281d1b7-13ef-47e0-bae0-6b29215cd69c",
+   "metadata": {},
+   "source": [
+    "# Properties and descriptors\n",
+    "\n",
+    "When I call a method on an instance, the call is rewritten:\n",
+    "\n",
+    "```python\n",
+    "s = 'abcd'\n",
+    "s.lower()  \n",
+    "```"
+   ]
   }
  ],
  "metadata": {
