--- a/2023 12December 25.ipynb
+++ b/2023 12December 25.ipynb
@@ -941,8 +941,20 @@
     "\n",
     "```python\n",
     "s = 'abcd'\n",
-    "s.lower()  \n",
-    "```"
+    "s.lower()    # this is rewritten to be str.lower(s)\n",
+    "```\n",
+    "\n",
+    "Who is doing this rewriting?\n",
+    "\n",
+    "A descriptor is an object that:\n",
+    "\n",
+    "- we define as a class attribute\n",
+    "- we access via the instance\n",
+    "\n",
+    "When we do this:\n",
+    "- If we ask for its value, we don't get the class attribute's value back. Rather, we run `__get__` on the object, and return its value\n",
+    "- If we assign to it, we don't set the attribute's value. Rather, we run `__set__` on the object\n",
+    "\n"
    ]
   }
  ],
