--- a/2023 12December 25.ipynb
+++ b/2023 12December 25.ipynb
@@ -954,7 +954,14 @@
     "When we do this:\n",
     "- If we ask for its value, we don't get the class attribute's value back. Rather, we run `__get__` on the object, and return its value\n",
     "- If we assign to it, we don't set the attribute's value. Rather, we run `__set__` on the object\n",
-    "\n"
+    "\n",
+    "We see this every day, when we call a method!\n",
+    "\n",
+    "- Methods are defined on the class\n",
+    "- We call them via the instance\n",
+    "- The descriptor sees the call via the instance, and rewrites the call to make the instance `self`\n",
+    "\n",
+    "Properties are easy-to-create descriptors, that look like "
    ]
   }
  ],
