--- a/2023 12December 25.ipynb
+++ b/2023 12December 25.ipynb
@@ -961,8 +961,44 @@
     "- We call them via the instance\n",
     "- The descriptor sees the call via the instance, and rewrites the call to make the instance `self`\n",
     "\n",
-    "Properties are easy-to-create descriptors, that look like "
+    "Properties are easy-to-create descriptors, that look like values but act like methods. That's because they are actually methods!"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "id": "8078914c-c385-4136-8aeb-a75053592d5d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Now in value getter!\n"
+     ]
+    }
+   ],
+   "source": [
+    "class MyClass:\n",
+    "    def __init__(self):\n",
+    "        self._value = None\n",
+    "\n",
+    "    @property\n",
+    "    def value(self):\n",
+    "        print('Now in value getter!')\n",
+    "        return self._value\n",
+    "\n",
+    "m = MyClass()\n",
+    "m.value     # ask via the instance, but value is defined on the class"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "85915ca7-dfbb-4442-9065-108d298a3682",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
