--- a/2023 12December 25.ipynb
+++ b/2023 12December 25.ipynb
@@ -994,8 +994,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 50,
    "id": "85915ca7-dfbb-4442-9065-108d298a3682",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Now in value getter!\n",
+      "None\n",
+      "Assigning 12345 to value!\n",
+      "Now in value getter!\n",
+      "12345\n"
+     ]
+    }
+   ],
+   "source": [
+    "class MyClass:\n",
+    "    def __init__(self):\n",
+    "        self._value = None\n",
+    "\n",
+    "    @property\n",
+    "    def value(self):\n",
+    "        print('Now in value getter!')\n",
+    "        return self._value\n",
+    "\n",
+    "    @value.setter\n",
+    "    def value(self, new_value):\n",
+    "        print(f'Assigning {new_value} to value!')\n",
+    "        self._value = new_value\n",
+    "\n",
+    "m = MyClass()\n",
+    "print(m.value)\n",
+    "m.value = 12345\n",
+    "print(m.value)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "81ce30c5-b2f1-4a9e-a347-526fb587f528",
    "metadata": {},
    "outputs": [],
    "source": []
