--- a/2023 12December 25.ipynb
+++ b/2023 12December 25.ipynb
@@ -1015,12 +1015,12 @@
     "    def __init__(self):\n",
     "        self._value = None\n",
     "\n",
-    "    @property\n",
+    "    @property      # this decorator means: the following method is a getter\n",
     "    def value(self):\n",
     "        print('Now in value getter!')\n",
     "        return self._value\n",
     "\n",
-    "    @value.setter\n",
+    "    @value.setter  # this decorator means: the following method is a setter for value\n",
     "    def value(self, new_value):\n",
     "        print(f'Assigning {new_value} to value!')\n",
     "        self._value = new_value\n",
@@ -1037,7 +1037,17 @@
    "id": "81ce30c5-b2f1-4a9e-a347-526fb587f528",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "class MyClass:\n",
+    "    def __init__(self, x):\n",
+    "        self.x = x\n",
+    "\n",
+    "    def x2(self):\n",
+    "        return self.x * 2\n",
+    "\n",
+    "    def __getattribute__(self, name):\n",
+    "        return f'Called '"
+   ]
   }
  ],
  "metadata": {
