--- a/2023 12December 25.ipynb
+++ b/2023 12December 25.ipynb
@@ -1033,7 +1033,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 53,
    "id": "81ce30c5-b2f1-4a9e-a347-526fb587f528",
    "metadata": {},
    "outputs": [],
@@ -1045,9 +1045,83 @@
     "    def x2(self):\n",
     "        return self.x * 2\n",
     "\n",
-    "    def __getattribute__(self, name):\n",
-    "        return f'Called '"
+    "    # if the attribute doesn't exist, then this method is called with the requested name\n",
+    "    def __getattr__(self, name):\n",
+    "        return f'Got __getattr__ with {name}'\n",
+    "\n",
+    "m = MyClass(10)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "id": "9fa75304-e938-4326-8537-d159519f61ed",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "10"
+      ]
+     },
+     "execution_count": 54,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "m.x"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "id": "47de3c93-5228-41c6-a955-d5a283039701",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Got __getattr__ with y'"
+      ]
+     },
+     "execution_count": 55,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "m.y"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "id": "00660f07-7331-45c7-a85b-ec6cf17ba20c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'<__main__.MyClass object at 0x107c54d50>'"
+      ]
+     },
+     "execution_count": 56,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "m.__str__()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d8727b88-bf65-4e0f-ab98-ee20f18eda06",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
