--- a/2023 12December 25.ipynb
+++ b/2023 12December 25.ipynb
@@ -1363,17 +1363,87 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 63,
    "id": "0be486e8-227d-49c1-9fb5-56b88fcb29ab",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "100"
+      ]
+     },
+     "execution_count": 63,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "class MyClass:\n",
     "    x = 100     # x is a class attribute, its value is an instance of int, aka 100\n",
     "\n",
     "m = MyClass()\n",
-    "m.x\n",
+    "m.x  \n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "id": "8db77b85-6ad4-4239-9c43-fff519a933b7",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "In MyDescriptor.__get__\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "12345"
+      ]
+     },
+     "execution_count": 64,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "class MyDescriptor:\n",
+    "    def __get__(self, instance, owner):\n",
+    "        print(f'In MyDescriptor.__get__')\n",
+    "        return 12345\n",
+    "\n",
+    "class MyClass:\n",
+    "    x = MyDescriptor()   # x is a class attribute, its value is instance of MyDescriptor\n",
+    "\n",
+    "m = MyClass()\n",
+    "m.x   "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "id": "537ad3d9-b8d6-418f-87c9-9b37448315a4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class MyClass:\n",
+    "    def hello(self):\n",
+    "        return f'Hello!'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ab4517f1-95e4-4c51-901a-c0091952ce42",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "MyClass.hello"
    ]
   }
  ],
