--- a/2023 12December 25.ipynb
+++ b/2023 12December 25.ipynb
@@ -1438,13 +1438,89 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 66,
    "id": "ab4517f1-95e4-4c51-901a-c0091952ce42",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<function __main__.MyClass.hello(self)>"
+      ]
+     },
+     "execution_count": 66,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "MyClass.hello"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "id": "c60b0755-4e6f-45a3-898a-1b2e4c259c10",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<bound method MyClass.hello of <__main__.MyClass object at 0x107c2d4d0>>"
+      ]
+     },
+     "execution_count": 67,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "m = MyClass()\n",
+    "m.hello"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 68,
+   "id": "7249d282-eb8c-4b16-8d96-0d8c7c8b21aa",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Hello!'"
+      ]
+     },
+     "execution_count": 68,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "m.hello()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9309bab0-c7a9-4f37-ae6b-f77d407a4eb4",
+   "metadata": {},
+   "source": [
+    "# Next up:\n",
+    "\n",
+    "1. Iterators\n",
+    "2. Iterators as classes\n",
+    "3. Generators\n",
+    "\n",
+    "Resume at :25"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6463cc72-2c6a-40cc-adcf-b553ce66f102",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
