--- a/2023 12December 25.ipynb
+++ b/2023 12December 25.ipynb
@@ -1516,8 +1516,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 69,
    "id": "6463cc72-2c6a-40cc-adcf-b553ce66f102",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "In MyDescriptor.__init__\n",
+      "In MyDescriptor.__get__\n",
+      "12345\n",
+      "In MyDescriptor.__get__\n",
+      "24690\n"
+     ]
+    }
+   ],
+   "source": [
+    "class MyDescriptor:\n",
+    "    def __init__(self):\n",
+    "        print(f'In MyDescriptor.__init__')\n",
+    "    def __get__(self, instance, owner):\n",
+    "        print(f'In MyDescriptor.__get__')\n",
+    "        return 12345\n",
+    "\n",
+    "class MyClass:\n",
+    "    x = MyDescriptor()   # x is a class attribute, its value is instance of MyDescriptor\n",
+    "\n",
+    "m = MyClass()\n",
+    "print(m.x)\n",
+    "print(m.x * 2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b6396638-fe1d-4505-b964-88748614f220",
    "metadata": {},
    "outputs": [],
    "source": []
