--- a/2023 12December 25.ipynb
+++ b/2023 12December 25.ipynb
@@ -1516,7 +1516,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 74,
    "id": "6463cc72-2c6a-40cc-adcf-b553ce66f102",
    "metadata": {},
    "outputs": [
@@ -1539,6 +1539,8 @@
     "    def __get__(self, instance, owner):\n",
     "        print(f'In MyDescriptor.__get__')\n",
     "        return 12345\n",
+    "    def __del__(self):\n",
+    "        print(f'Now deleting instance of MyDescriptor')\n",
     "\n",
     "class MyClass:\n",
     "    x = MyDescriptor()   # x is a class attribute, its value is instance of MyDescriptor\n",
@@ -1550,8 +1552,28 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 75,
+   "id": "92a2cda7-3059-4ff4-bef3-bc923da291a8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "del(m)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 76,
+   "id": "204e6e10-c983-45da-9584-031d4393381e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "del(MyClass)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "b6396638-fe1d-4505-b964-88748614f220",
+   "id": "aa037e35-dc3c-48c8-8b22-0491e45735ae",
    "metadata": {},
    "outputs": [],
    "source": []
