--- a/2023 12December 25.ipynb
+++ b/2023 12December 25.ipynb
@@ -1516,7 +1516,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 3,
    "id": "6463cc72-2c6a-40cc-adcf-b553ce66f102",
    "metadata": {},
    "outputs": [
@@ -1552,7 +1552,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 5,
    "id": "92a2cda7-3059-4ff4-bef3-bc923da291a8",
    "metadata": {},
    "outputs": [],
@@ -1562,7 +1562,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 6,
    "id": "204e6e10-c983-45da-9584-031d4393381e",
    "metadata": {},
    "outputs": [],
@@ -1572,8 +1572,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
+   "id": "8b592354-1265-4eb3-a55b-410d052eeb22",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "del(MyDescriptor)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
    "id": "aa037e35-dc3c-48c8-8b22-0491e45735ae",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import gc\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "0144fb88-3123-4873-8297-ad8a049fbb2a",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'MyDescriptor' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[9], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m gc\u001b[38;5;241m.\u001b[39mget_referrers(\u001b[43mMyDescriptor\u001b[49m)\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'MyDescriptor' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "gc.get_referrers(MyDescriptor)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9aaef6fd-eaed-4e16-8576-972289fb9eba",
    "metadata": {},
    "outputs": [],
    "source": []
