--- a/2023 12December 25.ipynb
+++ b/2023 12December 25.ipynb
@@ -1618,7 +1618,24 @@
    "id": "9aaef6fd-eaed-4e16-8576-972289fb9eba",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# context manager\n",
+    "\n",
+    "class MyCM:\n",
+    "    def __init__(self):\n",
+    "        print(f'In MyCM.__init__')\n",
+    "\n",
+    "    def __enter__(self, an_instance):\n",
+    "        print(f'In MyCM.__enter__')\n",
+    "        return self\n",
+    "\n",
+    "    def __exit__(self, *args):\n",
+    "        print(f'In MyCM.__exit')\n",
+    "\n",
+    "\n",
+    "\n",
+    "    "
+   ]
   }
  ],
  "metadata": {
