--- a/2023 12December 25.ipynb
+++ b/2023 12December 25.ipynb
@@ -1614,27 +1614,70 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "9aaef6fd-eaed-4e16-8576-972289fb9eba",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "In MyCM.__init__, x=10\n",
+      "10\n"
+     ]
+    }
+   ],
    "source": [
     "# context manager\n",
     "\n",
     "class MyCM:\n",
-    "    def __init__(self):\n",
-    "        print(f'In MyCM.__init__')\n",
+    "    def __init__(self, x):\n",
+    "        print(f'In MyCM.__init__, {x=}')\n",
+    "        self.x = x\n",
     "\n",
-    "    def __enter__(self, an_instance):\n",
+    "    def __enter__(self):\n",
     "        print(f'In MyCM.__enter__')\n",
     "        return self\n",
     "\n",
     "    def __exit__(self, *args):\n",
-    "        print(f'In MyCM.__exit')\n",
+    "        print(f'In MyCM.__exit__, {args=}')\n",
+    "        return True\n",
     "\n",
-    "\n",
-    "\n",
-    "    "
+    "m = MyCM(10)\n",
+    "print(m.x)   "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "985be701-7a9a-410b-a0df-50f523a3487b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "In MyCM.__init__, x=10\n",
+      "In MyCM.__enter__\n",
+      "Inside\n",
+      "In MyCM.__exit__, args=(None, None, None)\n"
+     ]
+    }
+   ],
+   "source": [
+    "with MyCM(10) as m:\n",
+    "    # __enter__\n",
+    "    print('Inside')\n",
+    "    # __exit__"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "fe2c358c-86ee-4c32-8ff8-2d0b1ba8a87f",
+   "metadata": {},
+   "source": [
+    "# Iteration!\n",
+    "\n"
    ]
   }
  ],
