--- a/2023 12December 25.ipynb
+++ b/2023 12December 25.ipynb
@@ -1677,8 +1677,48 @@
    "metadata": {},
    "source": [
     "# Iteration!\n",
-    "\n"
+    "\n",
+    "How does a `for` loop work in Python?\n",
+    "\n",
+    "1. `for` turns to the object at the end of the line, and asks if it's iterable.\n",
+    "    - If not, then we exit with a `TypeError`\n",
+    "2. `for` asks for the next item that the object has to offer\n",
+    "    - If there aren't any more, the loop ends\n",
+    "3. The next item from the object is assigned to our variable, and the loop body executes.\n",
+    "4. "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "4995f2df-269f-415e-9428-af80b4799d3b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "a\n",
+      "b\n",
+      "c\n",
+      "d\n"
+     ]
+    }
+   ],
+   "source": [
+    "s = 'abcd'\n",
+    "\n",
+    "for one_character in s:\n",
+    "    print(one_character)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1a5e50c9-a82b-43e4-a1ba-39f0cf083aaf",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
