--- a/2023 12December 25.ipynb
+++ b/2023 12December 25.ipynb
@@ -1685,7 +1685,7 @@
     "2. `for` asks for the next item that the object has to offer\n",
     "    - If there aren't any more, the loop ends\n",
     "3. The next item from the object is assigned to our variable, and the loop body executes.\n",
-    "4. "
+    "4. Goto 2"
    ]
   },
   {
@@ -1713,12 +1713,19 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "1a5e50c9-a82b-43e4-a1ba-39f0cf083aaf",
+   "cell_type": "markdown",
+   "id": "93ce5049-9e5e-4deb-aa1b-911438adb023",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "# In more detail:\n",
+    "\n",
+    "1. `for` turns to the object at the end of the line, and asks if it's iterable, using the builtin `iter` function.\n",
+    "    - If not, then we exit with a `TypeError`\n",
+    "2. `for` asks for the next item that the object has to offer\n",
+    "    - If there aren't any more, the loop ends\n",
+    "3. The next item from the object is assigned to our variable, and the loop body executes.\n",
+    "4. Goto 2"
+   ]
   }
  ],
  "metadata": {
